<resources>
    <string name="app_name">AndroidRoom</string>
    <string name="enter_name">Enter name</string>
    <string name="occupation">Occupation</string>
    <string name="button_text">Save</string>
    <string name="empty">Enter information</string>
    <string name="description_text">Add button icon</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
</resources>